# opengl-engine

./: .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  roadmap.md
apps/: CMakeLists.txt  godworld.cpp  modelviewer.cpp
apps/godworld/: CMakeLists.txt  gameapplication.cpp  gameapplication.hpp  godworld.cpp
apps/godworld/scene/: planetscene.cpp  planetscene.hpp  systemscene.cpp  systemscene.hpp
apps/godworld/src/: gameapplication.cpp  gameapplication.hpp  godworld.cpp
apps/godworld/src/scene/: planetscene.cpp  planetscene.hpp  systemscene.cpp  systemscene.hpp
apps/modeleditor/: CMakeLists.txt
apps/modeleditor/src/: application.cpp  application.hpp  model_editor.cpp
apps/modeleditor/src/entities/: triangle.cpp  triangle.hpp
apps/modeleditor/src/models/: triangle.cpp  triangle.hpp
apps/modeleditor/src/scene/: scene.cpp  scene.hpp
apps/modelviewer/: CMakeLists.txt  modelviewer.cpp  modelviewerapplication.cpp  modelviewerapplication.hpp
apps/modelviewer/scene/: modelscene.cpp  modelscene.hpp
apps/modelviewer/src/: modelviewer.cpp  modelviewerapplication.cpp  modelviewerapplication.hpp
apps/modelviewer/src/scene/: modelscene.cpp  modelscene.hpp
docs/: namingconventions.md
include/: application.hpp  camera.hpp  color.hpp  const.hpp  flatcamera.hpp  gameapplication.hpp  modelviewerapplication.hpp  opengl.hpp  planetscene.hpp  property.hpp  scene.hpp  sdl.hpp  shader.hpp  shadercontainer.hpp  systemscene.hpp  updateable.hpp  util.hpp
include/gui/: gui.hpp  guiobject.hpp  panel.hpp  propertytextfield.hpp  textfield.hpp
include/guibinding/: guibinding.hpp  sunguibinding.hpp
include/interfaces/: transformable.hpp
include/models/: ground.hpp  model.hpp  ray.hpp  selectable.hpp  (+3 more)
lib/: CMakeLists.txt
lib/libengine/engine/: application.cpp  application.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  const.hpp  opengl.hpp  random.cpp  random.hpp  scene.cpp  scene.hpp  sdl.cpp  sdl.hpp  shader.cpp  shader.hpp  shadercontainer.cpp  shadercontainer.hpp  shaderregistry.cpp  tree.hpp  util.cpp  util.hpp
lib/libengine/engine/components/: collider.cpp  collider.hpp  color_selector.cpp  color_selector.hpp  component.cpp  component.hpp  effect.cpp  effect.hpp  gui_component.hpp  model.cpp  model.hpp  script.hpp  shader.cpp  shader.hpp  shader_component.hpp  transform.cpp  transform.hpp
lib/libengine/engine/components/effects/: debug_vectors.cpp  debug_vectors.hpp  effect_container.cpp  effect_container.hpp  glow.cpp  glow.hpp  outline.cpp  outline.hpp
lib/libengine/engine/components/gui/: component_gui.cpp  component_gui.hpp  composite_gui.cpp  composite_gui.hpp  planet_gui.cpp  planet_gui.hpp  star_configuration_gui.cpp  star_configuration_gui.hpp  star_gui.cpp  star_gui.hpp  sun_configuration_gui.cpp  sun_configuration_gui.hpp  sun_gui.cpp  sun_gui.hpp
lib/libengine/engine/components/models/: background_model.cpp  background_model.hpp  model_factory.hpp  sphere.cpp  sphere.hpp  vector.cpp  vector.hpp
lib/libengine/engine/components/scripts/: demo_rotation.cpp  demo_rotation.hpp  planet_rotation.cpp  planet_rotation.hpp
lib/libengine/engine/components/shaders/: generic_shader_component.cpp  generic_shader_component.hpp
lib/libengine/engine/components/state/: planet_state.hpp  star_state.hpp  sun_state.hpp
lib/libengine/engine/components/update_scripts/: planet_rotation.cpp  planet_rotation.hpp  update_script.hpp
lib/libengine/engine/entities/: background.cpp  background.hpp  entity.cpp  entity.hpp  planet.cpp  planet.hpp  star.cpp  star.hpp
lib/libengine/engine/entity/: background.cpp  background.hpp  entity.cpp  entity.hpp  planet.cpp  planet.hpp  star.cpp  star.hpp
lib/libengine/engine/guibinding/: gui_factory.cpp  gui_factory.hpp  guibinding.cpp  guibinding.hpp  planet_gui.cpp  planet_gui.hpp  planetguibinding.cpp  planetguibinding.hpp  sun_configuration_gui.cpp  sun_configuration_gui.hpp  sun_gui.cpp  sun_gui.hpp  sunguibinding.cpp  sunguibinding.hpp
lib/libengine/engine/interfaces/: updateable.hpp
lib/libengine/engine/models/: background_model.cpp  background_model.hpp  ground.cpp  ground.hpp  model.cpp  model.hpp  model_factory.hpp  ray.cpp  ray.hpp  rectangle_model.cpp  rectangle_model.hpp  settlement.cpp  settlement.hpp  settlement_model.cpp  settlement_model.hpp  sphere.cpp  sphere.hpp  square.cpp  square.hpp  vector.cpp  vector.hpp
lib/libengine/engine/models/effects/: debug_vectors.cpp  debug_vectors.hpp  effect.hpp  glow.cpp  glow.hpp  outline.cpp  outline.hpp
lib/libengine/engine/noise/: simplex_noise.cpp  simplex_noise.hpp
lib/libengine/engine/objects/: background.cpp  background.hpp  collider.cpp  collider.hpp  entity.cpp  entity.hpp  object.cpp  object.hpp  planet.cpp  planet.hpp  rectangle.cpp  rectangle.hpp  settlement.cpp  settlement.hpp  star.cpp  star.hpp  sun.cpp  sun.hpp  transform.cpp  transform.hpp
lib/libengine/engine/scene/: scene.cpp  scene.hpp
lib/libengine/engine/shaders/: background.hpp  backgroundshader.hpp  circleshader.cpp  circleshader.hpp  glow.cpp  glow.hpp  glowshader.cpp  glowshader.hpp  lowpoly.cpp  lowpoly.hpp  lowpolyshader.cpp  lowpolyshader.hpp  registry.cpp  registry.hpp  shader.cpp  shader.hpp  shadercontainer.cpp  shadercontainer.hpp  shaderregistry.cpp  shaderregistry.hpp  silhouette.cpp  silhouette.hpp  silhouetteshader.cpp  silhouetteshader.hpp  star.hpp  star_shader.hpp  sun_shader.hpp
lib/libengine/engine/system/: rendering.cpp  rendering.hpp
lib/libengine/engine/systems/: rendering.cpp  rendering.hpp
lib/libgui/gui/: bounds.cpp  bounds.hpp  gui.cpp  gui.hpp  guiobject.cpp  guiobject.hpp  listview.cpp  listview.hpp  panel.cpp  panel.hpp  propertytextfield.cpp  propertytextfield.hpp  textfield.cpp  textfield.hpp
lib/libutil/util/: property.hpp
shaders/: fragment.glsl  geometry.glsl  vertex.glsl
src/: application.cpp  camera.cpp  color.cpp  flatcamera.cpp  gameapplication.cpp  main.cpp  modelviewerapplication.cpp  planetscene.cpp  scene.cpp  sdl.cpp  shader.cpp  shadercontainer.cpp  systemscene.cpp  util.cpp
test/: CMakeLists.txt
(+48 files in other folders)
